--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,22 @@
+# Application
 spring.application.name=shoppingCart
-spring.datasource.url=jdbc:h2:file:~/shopdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# PostgreSQL Configuration
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/shoppingdb}
+spring.datasource.username=${DB_USERNAME:shoppinguser}
+spring.datasource.password=${DB_PASSWORD:your_secure_password}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.sql.init.mode=never
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
+# H2 Console (for development only - disable in production)
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+
+# Server
+server.port=8080
+server.address=0.0.0.0
