--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,18 @@
-# Application
-spring.application.name=shoppingCart
+# Server
+server.port=5000
+server.address=0.0.0.0
 
-# PostgreSQL Configuration
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/shoppingdb}
-spring.datasource.username=${DB_USERNAME:shoppinguser}
-spring.datasource.password=${DB_PASSWORD:your_secure_password}
+# Database (use placeholders that will be overridden by environment variables)
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
 
-# H2 Console (for development only - disable in production)
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
-
-# Server
-server.port=8080
-server.address=0.0.0.0
+# Connection pool
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
